objects/PIA_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>ABB_Global_Id__c</fullName>
        <label>ABB Global Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BaId__c</fullName>
        <label>BaId</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <label>Batch Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BuId__c</fullName>
        <label>BuId</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Catalog_Description__c</fullName>
        <label>Catalog Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Fields__c</fullName>
        <label>Error Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Status_Code__c</fullName>
        <label>Error Status Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Code__c</fullName>
        <label>Item Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LSO_Country__c</fullName>
        <label>LSO Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LSO_Dis_Cha__c</fullName>
        <label>LSO Dis Cha</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LSO_Mat_Des__c</fullName>
        <label>LSO Mat Des</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LSO_Material_Number__c</fullName>
        <label>LSO Material Number</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LSO_Pro_Sal_Sta__c</fullName>
        <label>LSO Pro Sal Sta</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LSO__c</fullName>
        <label>LSO</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mandatory_Field_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory Field Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product2_Id__c</fullName>
        <label>Product2 Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <label>Product Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Line_Locked__c</fullName>
        <label>Product Line Locked</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Sales_Status__c</fullName>
        <label>Product Sales Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Local Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Products</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PIA Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Item_Code__c</columns>
        <columns>LSO_Material_Number__c</columns>
        <columns>LSO_Mat_Des__c</columns>
        <columns>LSO_Country__c</columns>
        <columns>Error_Fields__c</columns>
        <columns>Error_Status_Code__c</columns>
        <columns>Error_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_China</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Item_Code__c</columns>
        <columns>LSO_Material_Number__c</columns>
        <columns>LSO_Mat_Des__c</columns>
        <columns>LSO_Country__c</columns>
        <columns>Error_Fields__c</columns>
        <columns>Error_Status_Code__c</columns>
        <columns>Error_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LSO_Country__c</field>
            <operation>equals</operation>
            <value>CN</value>
        </filters>
        <label>All China</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_France</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Item_Code__c</columns>
        <columns>LSO_Material_Number__c</columns>
        <columns>LSO_Mat_Des__c</columns>
        <columns>LSO_Country__c</columns>
        <columns>Error_Fields__c</columns>
        <columns>Error_Status_Code__c</columns>
        <columns>Error_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LSO_Country__c</field>
            <operation>equals</operation>
            <value>FR</value>
        </filters>
        <label>All France</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Italy</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Item_Code__c</columns>
        <columns>LSO_Material_Number__c</columns>
        <columns>LSO_Mat_Des__c</columns>
        <columns>LSO_Country__c</columns>
        <columns>Error_Fields__c</columns>
        <columns>Error_Status_Code__c</columns>
        <columns>Error_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LSO_Country__c</field>
            <operation>equals</operation>
            <value>IT</value>
        </filters>
        <label>All Italy</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Spain</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Item_Code__c</columns>
        <columns>LSO_Material_Number__c</columns>
        <columns>LSO_Mat_Des__c</columns>
        <columns>LSO_Country__c</columns>
        <columns>Error_Fields__c</columns>
        <columns>Error_Status_Code__c</columns>
        <columns>Error_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LSO_Country__c</field>
            <operation>equals</operation>
            <value>ES</value>
        </filters>
        <label>All Spain</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>N-{000000}</displayFormat>
        <label>PIA Error Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PIA Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>